# rustpress-core-base

./: .gitignore  Cargo.toml  Dockerfile  preview-theme-enhanced.py  theme-server.py
.github/workflows/: ci.yml  release.yml
admin-ui/: TEST_PLAN.md  enhance_all_pages.py  enhance_dashboard.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx
admin-ui/src/api/: client.ts
admin-ui/src/apps/: CalendarApp.tsx  NotesApp.tsx  TaskManagerApp.tsx
admin-ui/src/data/: embeddedThemeData.ts
admin-ui/src/design-system/: ThemeProvider.tsx  animations.ts  index.ts  tokens.ts  utils.ts
admin-ui/src/hooks/: useMegaMenuData.ts
admin-ui/src/layouts/: EnterpriseLayout.tsx
admin-ui/src/pages/: Appearance.tsx  Cache.tsx  FunctionsPage.tsx  FunctionsPage.tsx.bak  IDEOverview.tsx  Menus.tsx  Plugins.tsx  SEO.tsx  Sidebars.tsx  ThemeEditor.tsx  ThemePreview.tsx  Themes.tsx
admin-ui/src/services/: aiAssistantService.ts  analyticsApi.ts  appsService.ts  assetService.ts  chatApi.ts  codeIntelligenceService.ts  debugService.ts  fileSystemService.ts  functionService.ts  gitService.ts  index.ts  projectGeneratorService.ts  searchService.ts  tasksService.ts  themeService.ts  websocketService.ts  windowSyncService.ts
admin-ui/src/store/: analyticsStore.ts  appStore.ts  chatStore.ts  collaborationStore.ts  dashboardStore.ts  databaseStore.ts  navigationStore.ts  pluginStore.ts  sidebarElementsStore.ts  storageStore.ts  tableStore.ts  tableStylesStore.ts  themeEditorStore.ts
admin-ui/src/test/: setup.tsx  utils.tsx
admin-ui/src/types/: app.ts  chat.ts  collaboration.ts
crates/rustpress-admin/: Cargo.toml
crates/rustpress-admin/src/: dbmanager.rs  functions.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  widgets.rs
crates/rustpress-api/src/: handlers.rs  lib.rs  services.rs
crates/rustpress-auth/src/: api_key.rs  audit.rs  brute_force.rs  csrf.rs  impersonation.rs  ip_filter.rs  jwt.rs  lib.rs  middleware.rs  oauth2_client.rs  oauth2_provider.rs  password.rs  permission.rs  rate_limit.rs  refresh_token.rs  session.rs  tokens.rs  totp.rs  webauthn.rs
crates/rustpress-cache/src/: backend.rs  cache.rs  key.rs
crates/rustpress-cdn/src/: bunnycdn.rs  cloudflare.rs  lib.rs  manager.rs
crates/rustpress-cli/src/: main.rs  output.rs  prompts.rs  repl.rs
crates/rustpress-content/src/: access.rs  autosave.rs  blocks.rs  bulk.rs  elementor.rs  excerpt.rs  featured.rs  fields.rs  i18n.rs  lib.rs  markdown.rs  media.rs  oembed.rs  post_types.rs  related.rs  revision.rs  sanitize.rs  scheduler.rs  shortcode.rs  taxonomy.rs  templates.rs  toc.rs  trash.rs  versioning.rs  workflow.rs  wxr.rs
crates/rustpress-core/src/: api.rs  config.rs  discovery.rs  error.rs  hook.rs  lib.rs  middleware.rs  plugin.rs  plugin_loader.rs  repository.rs  service.rs  tenant.rs
crates/rustpress-database/src/: lib.rs  migration.rs  models.rs  repository.rs
crates/rustpress-database/tests/: persistence_tests.rs
crates/rustpress-editor/src/: lib.rs
crates/rustpress-editor/tests/: comprehensive_tests.rs  editor_tests.rs  ide_tests.rs
crates/rustpress-events/src/: bus.rs  event.rs  lib.rs  subscriber.rs
crates/rustpress-server/: Cargo.toml
crates/rustpress-server/benches/: security_middleware.rs
crates/rustpress-server/src/: app.rs  background.rs  error.rs  extract.rs  lib.rs  main.rs  metrics.rs  middleware.rs  response.rs  routes.rs  setup.rs  shutdown.rs  state.rs
crates/rustpress-server/src/security/: bot_detection.rs  content_security.rs  fingerprint.rs  mod.rs  request_validation.rs  security_audit.rs
crates/rustpress-server/src/services/: email_service.rs  mod.rs  render_service.rs  theme_service.rs
crates/rustpress-server/src/websocket/: chat.rs  collaboration.rs  handler.rs  hub.rs  message.rs  mod.rs  presence.rs
migrations/: 00025_collaboration_and_chat.sql  00026_storage_configuration.sql
plugins/visual-queue-manager/: .gitignore  Cargo.toml  plugin.toml
plugins/visual-queue-manager/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
plugins/visual-queue-manager/frontend/src/: App.tsx  index.css  main.tsx
plugins/visual-queue-manager/frontend/src/api/: client.ts
plugins/visual-queue-manager/frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
plugins/visual-queue-manager/frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  index.ts
plugins/visual-queue-manager/frontend/src/components/pages/: Alerts.tsx  AuditLogs.tsx  Dashboard.tsx  Handlers.tsx  Messages.tsx  Metrics.tsx  QueueDetail.tsx  Queues.tsx  ScheduledJobs.tsx  Settings.tsx  Subscriptions.tsx  Workers.tsx  index.ts
plugins/visual-queue-manager/frontend/src/hooks/: useWebSocket.ts
plugins/visual-queue-manager/frontend/src/store/: index.ts
plugins/visual-queue-manager/frontend/src/types/: index.ts
plugins/visual-queue-manager/migrations/: 001_core_tables.sql  002_messages_table.sql  003_workers_table.sql  004_event_handlers.sql  005_metrics_tables.sql  006_audit_logs.sql  007_scheduled_jobs.sql  008_subscriptions.sql  009_organization.sql
plugins/visual-queue-manager/src/: hooks.rs  hooks_impl.rs  lib.rs
plugins/visual-queue-manager/src/admin/: dashboard.rs  hooks.rs  mod.rs  permissions.rs  settings.rs
plugins/visual-queue-manager/src/api/: admin.rs  handlers.rs  messages.rs  metrics.rs  mod.rs  queues.rs  scheduled.rs  subscriptions.rs  workers.rs
plugins/visual-queue-manager/src/engine/: circuit_breaker.rs  dispatcher.rs  dlq.rs  message.rs  metrics.rs  mod.rs  queue.rs  retry.rs  scheduler.rs  storage.rs  worker.rs
plugins/visual-queue-manager/src/enterprise/: compliance.rs  encryption.rs  mod.rs  multi_tenancy.rs  rate_limiter.rs
plugins/visual-queue-manager/src/models/: alert.rs  audit.rs  handler.rs  job.rs  message.rs  mod.rs  queue.rs  subscription.rs  worker.rs
themes/rustpress-enterprise/: preview.html
(+651 files in other folders)
